WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251311
Find on page intermittently fails to show results in PDFs in Safari
https://bugs.webkit.org/show_bug.cgi?id=251311
Summary
Find on page intermittently fails to show results in PDFs in Safari
Richard Robinson
Reported
2023-01-27 22:19:32 PST
rdar://100155151
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-01-27 22:32:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9277
EWS
Comment 2
2023-01-31 17:51:37 PST
Committed
259655@main
(dd929cd085dc): <
https://commits.webkit.org/259655@main
> Reviewed commits have been landed. Closing PR #9277 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug