Source/WebKit/Platform/spi/ios/UIKitSPI.h
@@ -136,6 +136,7 @@
 #endif
 
 #if HAVE(UIFINDINTERACTION)
+#import <UIKit/UIFindSession_Private.h>
 #import <UIKit/_UIFindInteraction.h>
 #import <UIKit/_UITextSearching.h>
 #endif
@@ -363,6 +364,10 @@ typedef id<NSCoding, NSCopying> _UITextSearchDocumentIdentifier;
 
 @interface UIFindInteraction ()
 @property (class, nonatomic, copy, getter=_globalFindBuffer, setter=_setGlobalFindBuffer:) NSString *_globalFindBuffer;
+@end
+
+@interface UITextSearchingFindSession ()
+@property (nonatomic, readwrite, weak) id<UITextSearching> searchableObject;
 @end
 
 #endif // HAVE(UIFINDINTERACTION)
